--- a/index.html
+++ b/index.html
@@ -47,6 +47,12 @@
                 <div id="industry_year">
                 </div>
         </div>
+
+        <div class="row mb-3">
+            <h2 class="mb-3">Here's how they have performed over the years</h2>
+                <div id="occupation_rank_employer">
+                </div>
+        </div>
     </div>
 
 
