--- a/index.html
+++ b/index.html
@@ -53,6 +53,13 @@
                 <div id="occupation_rank_employer">
                 </div>
         </div>
+
+        <div class="row mb-3">
+            <h2 class="mb-3">Here's how they have performed over the years</h2>
+                <div id="unemployment">
+                </div>
+        </div>
+
     </div>
 
 
