--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
         </div>
 
         <div class="row mb-3">
+            <h2 class="mb-3">Australia's Migrant Population by State</h2>
+            <div class="col">
+                <div id="map">
+                </div>
+            </div>
+        </div>
+
+        <div class="row mb-3">
             <h2 class="mb-3">Skilled visa is the common form of migration</h2>
             <div class="col">
                 <div id="visa_year">
@@ -49,13 +57,13 @@
         </div>
 
         <div class="row mb-3">
-            <h2 class="mb-3">Here's how they have performed over the years</h2>
+            <h2 class="mb-3">Cooks, Software Developers and Cafe Managers are the top professions for Migration</h2>
                 <div id="occupation_rank_employer">
                 </div>
         </div>
 
         <div class="row mb-3">
-            <h2 class="mb-3">Here's how they have performed over the years</h2>
+            <h2 class="mb-3">But there's a higher employment rate within the migrant population compared to Australian borns</h2>
                 <div id="unemployment">
                 </div>
         </div>
