--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
 
         <div class="row mb-5">
-            <h2 class="mb-3">Skilled visa is the common form of migration</h2>
+            <h2 class="mb-3">Skilled visa is the most common form of migration</h2>
             <div class="col">
                 <div id="visa_year">
                 </div>
@@ -63,7 +63,7 @@
         </div>
 
         <div class="row mb-5">
-            <h2 class="mb-3">But there's a higher employment rate within the migrant population compared to Australian borns</h2>
+            <h2 class="mb-3">But there's a higher unemployment rate within the migrant population compared to Australian borns</h2>
                 <div id="unemployment">
                 </div>
         </div>
