--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="row mb-5 d-flex align-items-stretch">
             <div class="col">
                 <div class="card">
-                    <h3 class="card-header">Visualization 1</h3>
+                    <h3 class="card-header">Which state offers the highest number of migrations?</h3>
                     <div class="card-body">
                         <p>
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
@@ -55,7 +55,7 @@
         <div class="row mb-5 d-flex align-items-stretch">
             <div class="col mr-2 d-flex flex-column">
                 <div class="card">
-                    <h3 class="card-header">Visualization 2</h3>
+                    <h3 class="card-header">What type of visa is best for migration?</h3>
                     <div class="card-body">
                         <p>
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
@@ -68,7 +68,7 @@
             </div>
             <div class="col d-flex flex-column">
                 <div class="card">
-                    <h3 class="card-header">Visualization 3</h3>
+                    <h3 class="card-header">Which industries offer the most number of migrations?</h3>
                     <div class="card-body">
                         <p>
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
@@ -83,7 +83,7 @@
         <div class="row mb-5 d-flex align-items-stretch">
             <div class="col mr-2 d-flex flex-column">
                 <div class="card">
-                    <h3 class="card-header">Visualization 4</h3>
+                    <h3 class="card-header">Which professions have the best outlook for migration?</h3>
                     <div class="card-body">
                         <p>
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
@@ -95,7 +95,7 @@
             </div>
             <div class="col d-flex flex-column">
                 <div class="card">
-                    <h3 class="card-header">Visualization 5</h3>
+                    <h3 class="card-header">How is the job market for migrants?</h3>
                     <div class="card-body">
                         <p>
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
