--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             <div class="p-5 mb-4 bg-light rounded-3" id="intro">
                 <div class="container-fluid py-5">
                   <h1 class="display-5 fw-bold">Road to migration in Australia</h1>
-                  <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
-                  <button class="btn btn-dark btn-lg" type="button">Example button</button>
+                  <p class="col-md-8 fs-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+                  <button class="btn btn-dark btn-lg" type="button">Button</button>
                 </div>
               </div>
         </div>
