added independent to occupation rank

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         <h3 class="card-header">Which state offers the highest number of migrations?</h3>
                         <div class="card-body">
                             <p>
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                When it comes to skilled migration, New South Wales and Victoria have always been the states offering the highest number of migrations. Other states like Queensland and Western Australia used to have low migration numbers but they increased their efforts after 2005 and the numbers have since quadrupled. In 2009 and 2010, there was an overall decrease in the number of migrations due to the global financial crisis. New South Wales, Victoria and Western Australia recovered quickly but Queensland has been more or less stagnant. From 2013 onwards, the states started to become more conservative in the number of migrations they take and they never really caught upto their 2005 numbers. 
                             </p>
                             <div class="d-flex justify-content-center">
                                 <div id="map">
@@ -107,7 +107,7 @@
                         <h3 class="card-header">What type of visa is best for migration?</h3>
                         <div class="card-body">
                             <p>
-                                Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                                Skilled visa has always been the most common form of migration. Usually in the cases of families, the primary applicant applies for a skilled visa. Their dependents then apply for a family visa. We can see an overall downward trend in the number of skilled and family visa migrations. Before the COVID-19 pandemic, the Australian Government had already reduced the number of permanent residency visas available from approximately 190,000 to approximately 160,000. In 2018-2019, there were 140,366 visas granted, the lowest figure over the past 15 years. With the Australian borders currently closed, 2020-21 will likely see the lowest number of new permanent visas granted. 
                             </p>
                             
                             <div id="visa_year">
